--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,7 @@
     --font-bricolage: "Bricolage Grotesque";
     --font-bricolage--font-weight: 700;
 
+    --text-xs: 0.875rem;
     --text-sm: 1rem;
     --text-base: 1.125rem;
     --text-3xl: 1.75rem;
