--- a/src/styles.css
+++ b/src/styles.css
@@ -60,10 +60,7 @@
     }
 
     .wrapper {
-        width: 100%;
-        margin-inline: auto;
-        padding-inline: 2rem;
-        max-width: 80rem;
+        @apply w-full mx-auto px-4 md:px-8 max-w-320;
     }
 
     @supports not selector(::-webkit-scrollbar) {
